--- a/package.json
+++ b/package.json
@@ -1,60 +1,120 @@
 {
 
-  "name": "spotify",
+  "name": "uiSystem",
+
   "version": "0.1.0",
+
   "private": true,
+
   "dependencies": {
+
     "@radix-ui/react-dialog": "^1.0.5",
+
     "@radix-ui/react-slot": "^1.0.2",
+
     "@reduxjs/toolkit": "^2.2.1",
+
     "@tailwindcss/line-clamp": "^0.4.4",
+
     "@testing-library/jest-dom": "^5.17.0",
+
     "@testing-library/react": "^13.4.0",
+
     "@testing-library/user-event": "^13.5.0",
+
+    "axios": "^1.6.7",
+
     "class-variance-authority": "^0.7.0",
+
     "clsx": "^2.1.0",
+
     "lucide-react": "^0.340.0",
+
     "next-themes": "^0.2.1",
+
     "react": "^18.2.0",
+
     "react-dom": "^18.2.0",
+
     "react-icons": "^5.0.1",
+
     "react-lorem-ipsum": "^1.4.10",
+
     "react-redux": "^9.1.0",
+
     "react-router-dom": "^6.22.1",
+
     "react-scripts": "5.0.1",
+
     "sonner": "^1.4.1",
+
     "tailwind-merge": "^2.2.1",
+
     "tailwindcss-animate": "^1.0.7",
+
     "typescript": "^4.9.5",
+
     "web-vitals": "^2.1.4"
+
   },
+
   "scripts": {
+
     "dev": "react-scripts start",
+
     "build": "react-scripts build",
+
     "test": "react-scripts test",
+
     "eject": "react-scripts eject",
+
     "server": "json-server --port 3001 --host localhost db.json"
+
   },
+
   "eslintConfig": {
+
     "extends": [
+
       "react-app",
+
       "react-app/jest"
+
     ]
+
   },
+
   "browserslist": {
+
     "production": [
+
       ">0.2%",
+
       "not dead",
+
       "not op_mini all"
+
     ],
+
     "development": [
+
       "last 1 chrome version",
+
       "last 1 firefox version",
+
       "last 1 safari version"
+
     ]
+
   },
+
   "devDependencies": {
+
     "json-server": "^1.0.0-alpha.23",
+
     "tailwindcss": "^3.4.1"
+
   }
+
 }
+
